# gquery

./: LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: airports_demo.ipynb  gquery_demo.ipynb  world_cities_explore.ipynb
src/gquery/: __init__.py  airport.py  city.py  cli.py  coordinate.py  distance.py  engine.py
src/gquery/data/: global_airports.csv
tests/: test_coordinate.py  test_gquery.py
