[tool.poetry]
name = "gquery"
version = "0.1.0"
description = "Library and a simple CLI tool for querying geographic facts about world cities and airports."
authors = ["tispell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
