[tool.poetry]
name = "gquery"
version = "0.1.0"
description = "Library and a simple CLI tool for querying geographic facts about world cities and airports."
authors = ["tispell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
pyinputplus = "^0.2.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.scripts]
gquery = 'gquery.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
